V 0.12.0:
  - Added type annotations to db model attributes
  - Made db model relations bi-directional
  - Fixed sentry logging behaviour for flask
V 0.11.0:
  - Log traceback in errors in flask framework
V 0.10.2:
  - Added more postgres variables to required variables for better backups
V 0.10.1:
  - Don't activate telegram when testing
V 0.10.0:
  - Added specification for environment variables in flask framework
  - Added telegram bot capabilities to flask framework
  - Added URL path capabilities to flask framework
  - Added environment variable dumping capabilities to flask framework
V 0.9.6:
  - Added domain name to flask config
V 0.9.5:
  - Enhanced flask logging
V 0.9.4:
  - Fixed enum handling in ModelMixin repr method
V 0.9.3:
  - Fixed flask API issues
V 0.9.2:
  - Added ways to add more variables to template rendering for default routes
  - Fixed loading extra config data
  - Fixed issues with flask while testing due to import side effects
V 0.9.1:
  - Fixed errors when missing recaptcha string in form
V 0.9.0:
  - Added flask module
V 0.8.0:
  - Added env module
V 0.7.0:
  - Added json module
  - Added imap and smtp modules
  - Added recaptcha module
V 0.6.0:
  - Fixed some prompting issues
  - Added requests and subprocess modules
V 0.5.1:
  - Added get_ext function
  - Added choices option to prompt function
V 0.5.0:
  - Added capability to log to files easily
  - Added silent option
  - Added ColorLogger
  - Fixed selection prompt ranges
V 0.4.6:
  - Added option to remove trailing zeroes from human_readable_bytes function
V 0.4.5:
  - Added function to convert an amount of bytes into a human-readable string
V 0.4.4:
  - Added default parameter to commalist prompt
V 0.4.3:
  - Added create_file function
V 0.4.2:
  - Fixed issues with comma list prompts giving empty strings
V 0.4.1:
  - Added more prompt functions
V 0.4.0:
  - Added graphql class
  - Added option for logging to cli_start
  - Added pprint functionality
  - Added prompt functions