@@ -2,6 +2,8 @@ V 0.12.0:
   - Added type annotations to db model attributes
   - Made db model relations bi-directional
   - Fixed sentry logging behaviour for flask
+  - Adjusted parameters provided to registration and password forgot emails
+  - Now fails gracefully if database connection can't be established
 V 0.11.0:
   - Log traceback in errors in flask framework
 V 0.10.2:
